primer subida de repo

--- a/index.html
+++ b/index.html
@@ -5,10 +5,162 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>DAVID COSTA</title>
-    <link rel="stylesheet" href="./css/styles.css">k
+    <link href="css/ihover.css" rel="stylesheet">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    
+    <div class="saludo">
+        <div class="foto">
+            <img src="./resources/img/FOTO_CV-removebg-preview111.png" alt="fotoCv">
+         </div>
+         <div class="textos">
+            <p class="textoA">¡Hola!</p>
+            <p class="textoB">Soy</p>
+            <p class="nombre">DAVID...</p>
+         </div>
+
+    </div>
+    <div class="proyectos">
+        <p class="texto">Esta es la seccion de proyectos, en grilla como INSTAGRAM</p>
+        <div class="contenedorProyectos">
+            <div class="proyecto">
+                <div class="imgProyecto">
+                    <img src="./resources/img/vistaPrevia/vista-previa-hidroepdales.jpg" alt="">
+                </div>
+                <div class="descripcionProyecto">
+                    <p class="titulo">Hidropedales Sj</p>
+                    <p class="descripcion">Landing page, uso de tecnologias de HTML CSS BOOTS</p>
+                    <button class="btnVisitar">Visitar</button>
+                </div>
+            </div>
+            <div class="proyecto">
+                <div class="imgProyecto">
+                    <img src="./resources/img/vistaPrevia/vista-previa-hidroepdales.jpg" alt="">
+                </div>
+                <div class="descripcionProyecto">
+                    <p class="titulo">Hidropedales Sj</p>
+                    <p class="descripcion">Landing page, uso de tecnologias de HTML CSS BOOTS</p>
+                    <button class="btnVisitar">Visitar</button>
+                </div>
+            </div>
+            <div class="proyecto">
+                <div class="imgProyecto">
+                    <img src="./resources/img/vistaPrevia/vista-previa-hidroepdales.jpg" alt="">
+                </div>
+                <div class="descripcionProyecto">
+                    <p class="titulo">Hidropedales Sj</p>
+                    <p class="descripcion">Landing page, uso de tecnologias de HTML CSS BOOTS</p>
+                    <button class="btnVisitar">Visitar</button>
+                </div>
+            </div>
+           
+        </div>
+    </div>
+
+    <div class="proyectos2">
+        <div class="contenedorProyecto">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="ih-item square effect6 from_left_and_right">
+                        <a href="https://davidcosta92.github.io/HidropedalesSj-CostaDavid/" target="_blank">
+                            <div class="img">
+                                <img src="./resources/img/vistaPrevia/vista-previa-hidroepdales.jpg" alt="Logo hidropedales san juan">
+                            </div>
+                            <div class="info">
+                                <h3>Hidropedales SJ</h3>
+                                <p>Landing page realizada para empresa de Turismo, con formulario de contacto y mapa. 
+                                    Construida y adaptada con tecnicas de SEO, usando HTML, CSS, Bootstrap, y JS.</p>
+                                <button class="btnVisitar">Vistar</button>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="contenedorProyecto">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="ih-item square effect6 from_left_and_right">
+                        <a href="https://davidcosta92.github.io/pagina-Web-Consultorio/" target="_blank">
+                            <div class="img">
+                                <img src="./resources/img/vistaPrevia/vista-previa-cem.png" alt="Logo clinica CEM">
+                            </div>
+                            <div class="info">
+                                <h3>Clinica CEM</h3>
+                                <p>Landing page realizada para clinica de diversas especialidades de la salud, con formulario de contacto y mapa. 
+                                    Construida y adaptada con tecnicas de SEO, usando HTML, CSS, Bootstrap, y JS.</p>
+                                <button class="btnVisitar">Vistar</button>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="contenedorProyecto">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="ih-item square effect6 from_left_and_right">
+                        <a href="https://davidcosta92.github.io/Ecomerce-Js-CoderHouse/" target="_blank">
+                            <div class="img">
+                                <img src="./resources/img/vistaPrevia/vista-previa-fravega.png" alt="Ecomerce-Js-CoderHouse">
+                            </div>
+                            <div class="info">
+                                <h3>Ecomerce</h3>
+                                <p>Ecomerce generado en JavaScript, inspirado en la marca Fravega, </p>
+                                <button class="btnVisitar">Vistar</button>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="contenedorProyecto">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="ih-item square effect6 from_left_and_right">
+                        <a href="https://davidcosta92.github.io/SanJuanSup/" target="_blank">
+                            <div class="img">
+                                <img src="./resources/img/vistaPrevia/vista-previa-san-juan-sup.png" alt="Logo san juan sup">
+                            </div>
+                            <div class="info">
+                                <h3>San Juan Sup</h3>
+                                <p>Landing page r................................ y JS.</p>
+                                <button class="btnVisitar">Vistar</button>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="contenedorProyecto">
+            <div class="row">
+                <div class="col-sm-6">
+                    <div class="ih-item square effect6 from_left_and_right">
+                        <a href="https://davidcosta92.github.io/CoderH_ReactJS/" target="_blank">
+                            <div class="img">
+                                <img src="./resources/img/vistaPrevia/vista-previa-taibe.png" alt="logo taibe">
+                            </div>
+                            <div class="info">
+                                <h3>Hidropedales SJ</h3>
+                                <p>Landing page realizada para empresa de Turismo, con formulario de contacto y mapa. 
+                                    Construida y adaptada con tecnicas de SEO, usando HTML, CSS, Bootstrap, y JS.</p>
+                                <button class="btnVisitar">Vistar</button>
+                            </div>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
+    <div class="about">
+        <P class="texto">Esta es la seccion de ABOUT y contacto</P>
+    </div>
 
     <script src="./js/main.js"></script>
 </body>
